@@ -1,3 +1,12 @@
+2005-07-20 Jens Tkotz <jens@peino.de> 1.5.1-cvs-b63
+
+	* FIX: When an admin changed something in his/her userdata, he/she lost the admin status.
+	Thanks to Iain Lea
+
+	* Fix: Translated JS messages in ecard_form.php
+
+	* Fix: Added ecard files to translation list.
+
 2005-07-20 Jens Tkotz <jens@peino.de> 1.5.1-cvs-b62
 
 	* Fix: classes/Album.php
